Update README for IntelliJ IDEA

--- a/README
+++ b/README
@@ -3,3 +3,6 @@ The Mosquito simulator.
 Notes:
 * Main class mosquito.sim.GameEngine
 * Arguments [ mosquito.xml gui ]
+
+IntelliJ IDEA
+* Change compiler output to bin/ (in project structure)
